--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -15,8 +15,9 @@
 </head>
 
 <body>
-  <div class="containerservices">
-    <header>
+  <div class="container">
+    <div class="containerservices">
+      <header>
         <nav>
           <a href="services.html">Services</a>
           <a href="services.html">Product</a>
@@ -24,26 +25,26 @@
           <a href="services.html">Features</a>
           <a href="services.html">About</a>
           <a href="services.html">Contact</a>
+          <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
         </nav>
-      </div>
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+      </header>
+    </div>
+    
+  <div class="top-image">
+    <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+  </div>
 
-
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
-
-<section class="service-content">
   
+  <section class="services">
       <div class="service-text">
         <h4>Services</h4>
 
-    <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+          <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
       </div>
-  
-</section>
+  </section>
 
-<section class="digital-content">
-
-    <div class="digital-design">
+  <section class="boxes">
+    <div class="digital-design box">
       <h4>Digital Design</h4>
 
         <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
@@ -51,21 +52,21 @@
 
       <button>Learn More</button>
     </div>
-</section>
 
-<section class="ux-content">
-  <div class="ux-ui">
-    <h4>UX / UI</h4>
 
-      <p> suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.</p>
+
+    <div class="ux-ui box">
+      <h4>UX / UI</h4>
+
+        <p> suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
 
     <button>Learn More</button>
-  </div>
-</section>
+    </div>
 
-<section class="marketing-content">
-    <div class="digital-marketing">
+
+
+    <div class="digital-marketing box">
 
       <h4>Digital Marketing</h4>
 
@@ -74,10 +75,10 @@
 
       <button>Learn More</button>
     </div>
-</section>
 
-<section class="webdev-content">
-    <div class="webdev">
+
+
+    <div class="webdev box">
       
       <h4>Web Development</h4>
 
@@ -86,43 +87,52 @@
 
       <button>Learn More</button>
     </div>
+
+    <div class="ios box">
+      <h4>iOS Development</h4>
+
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+
+        <button>Learn More</button>
+
+    </div>  
+
+    <div class="android box">
+      <h4>Android Development</h4>
+
+        <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+
+        <button>Learn More</button>
+
+    </div>
+
 </section>
 
+  <section class="bottom-services">
+    <div class="facts">
+      <h4>Some Facts About Our Services</h4>
 
-<h4>iOS Development</h4>
+        <p>suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+        eleifend. Mauris euismod facilisis iaculis.</p>
+    </div>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-<button>Learn More</button>
-
-
-
-<h4>Android Development</h4>
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-<button>Learn More</button>
-
-
-<h4>Some Facts About Our Services</h4>
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
+<ul class="services-list">
+  <li>Awesome thing</li>
+  <li>Amazing thing</li>
+  <li>Cool thing</li>
+  <li>Great thing</li>
+</ul>
 
 <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
+  </section>
+  
     <footer>
       <p>Copyright Great Idea! 2018</p>
     </footer>
   </div>
+</div>
 </body>
 
 </html>
